Add spacing to cards

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,8 +7,17 @@
   <link href="/css/main.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville|Montserrat&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="relative">
+  <ul class="skip-links">
+    <li><a href="#nav">Jump to navigation content</a></li>
+    <li><a href="#main">Jump to main content</a></li>
+  </ul>
 
+  <!-- {% pattern header/header %}
+  <main role="main" tabindex="0">
+    {{content}}
+  </main>
+  {% pattern footer/footer %} -->
 
 </body>
 </html>
