--- a/_patterns/cards/cards.css
+++ b/_patterns/cards/cards.css
@@ -5,3 +5,8 @@
   background: linear-gradient(rgba(21,153,173,1) 35%, rgba(255,255,255,1) 87%);
 
 }
+
+.description h2 {
+ color: var(--color-secondary-dark);
+ font-weight: bold;
+}
