--- a/_patterns/banner/banner.css
+++ b/_patterns/banner/banner.css
@@ -9,7 +9,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: scroll;
-  background-position: bottom;
+  background-position: top;
 }
 
 .hero-banner {
@@ -20,6 +20,28 @@
   background-repeat: no-repeat;
   background-attachment: scroll;
   /* background-position: left bottom; */
-  background-position: -20px 50px;
+  background-position: top;
   overflow: hidden;
+}
+
+.banner-title {
+  height: 100vh;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 80%;
+}
+
+.main-title {
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  top: 50%;
+}
+
+.hero-title {
+  position: absolute;
+  left: 50%;
+  top: 35%;
+  transform: translate(-50%, -50%);
 }
