--- a/_patterns/forms/form.css
+++ b/_patterns/forms/form.css
@@ -1,8 +1,27 @@
 .form-container {
   padding: 16px;
-  background-color: red;
-  border: 12px solid #B22222;
+  background-color: #ffffff;
+  border: 12px solid #000000;
   border-radius: 10px;
   margin-top: 15px;
   margin-bottom: 15px;
+}
+
+input[type=text], input[type=password] {
+  width: 100%;
+  padding: 15px;
+  margin: 5px 0 22px 0;
+  display: inline-block;
+  border: none;
+  background: #f1f1f1;
+}
+
+input[type=text]:focus, input[type=password]:focus {
+  background-color: #ddd;
+  outline: none;
+}
+
+hr {
+  border: 1px solid #f1f1f1;
+  margin-bottom: 25px;
 }
