Created Submission Form

--- a/_patterns/forms/form.css
+++ b/_patterns/forms/form.css
@@ -1,4 +1,4 @@
-.form-container {
+.form-container, .search-container {
   padding: 16px;
   background-color: #ffffff;
   border: 12px solid #000000;
@@ -24,4 +24,8 @@ input[type=text]:focus, input[type=password]:focus {
 hr {
   border: 1px solid #f1f1f1;
   margin-bottom: 25px;
+}
+
+.search-container {
+  text-align: center;
 }
