add logo to header and change color of icons

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,11 @@
     <li><a href="#main">Jump to main content</a></li>
   </ul>
 
-  <!-- {% pattern header/header %}
+  {% pattern banner/main-banner heading="Connect. Build. Grow." text="Experience Better Design Now" banner_img="/images/placeholder-16by9.svg" %}
   <main role="main" tabindex="0">
     {{content}}
   </main>
-  {% pattern footer/footer %} -->
+{% pattern footer/footer social1="Facebook" icon1="/images/facebook.svg" link1="https://wwww.facebook.com" social2="Twitter" icon2="/images/twitter.svg" link2="https://wwww.twitter.com" social3="Pinterest" icon3="/images/pinterest.svg" link3="https://wwww.pinterest.com" social4="Instagram" icon4="/images/instagram.svg" link4="https://wwww.instagram.com" %}
 
 </body>
 </html>
