--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,10 @@
     <li><a href="#main">Jump to main content</a></li>
   </ul>
 
-  <!-- {% pattern header/header %}
   <main role="main" tabindex="0">
     {{content}}
   </main>
-  {% pattern footer/footer %} -->
+{% pattern footer/footer social1="Facebook" icon1="/images/placeholder-1by1.svg" link1="https://wwww.facebook.com" social2="Facebook" icon2="/images/placeholder-1by1.svg" link2="https://wwww.facebook.com" social3="Facebook" icon3="/images/placeholder-1by1.svg" link3="https://wwww.facebook.com" social4="Facebook" icon4="/images/placeholder-1by1.svg" link4="https://wwww.facebook.com" %}
 
 </body>
 </html>
