Add all pages to the website and all its content
This is a mega update adding everything we need except images.

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -13,11 +13,11 @@
     <li><a href="#main">Jump to main content</a></li>
   </ul>
 
-  {% pattern banner/main-banner heading="Connect. Build. Grow." text="Experience Better Design Now" banner_img="/images/placeholder-16by9.svg" %}
+{% pattern header/header logo="/images/design-mind-logo.svg" %}
   <main role="main" tabindex="0">
     {{content}}
   </main>
-{% pattern footer/footer social1="Facebook" icon1="/images/facebook.svg" link1="https://wwww.facebook.com" social2="Twitter" icon2="/images/twitter.svg" link2="https://wwww.twitter.com" social3="Pinterest" icon3="/images/pinterest.svg" link3="https://wwww.pinterest.com" social4="Instagram" icon4="/images/instagram.svg" link4="https://wwww.instagram.com" %}
+{% pattern footer/footer social1="Facebook" icon1="/images/placeholder-1by1.svg" link1="https://wwww.facebook.com" social2="Facebook" icon2="/images/placeholder-1by1.svg" link2="https://wwww.facebook.com" social3="Facebook" icon3="/images/placeholder-1by1.svg" link3="https://wwww.facebook.com" social4="Facebook" icon4="/images/placeholder-1by1.svg" link4="https://wwww.facebook.com" %}
 
 </body>
 </html>
