--- a/_patterns/Sections/sections.css
+++ b/_patterns/Sections/sections.css
@@ -67,7 +67,7 @@ p {
   border-radius: 8px;
   color: white;
   text-decoration: none;
-  margin-top: 1em;
+  /* margin-top: 1em; */
 }
 
 .btn-big {
