--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
   <main role="main" tabindex="0">
     {{content}}
   </main>
-{% pattern footer/footer social1="Facebook" icon1="/images/facebook.svg" link1="https://wwww.facebook.com" social2="Facebook" icon2="/images/instagram.svg" link2="https://wwww.facebook.com" social3="Facebook" icon3="/images/pinterest.svg" link3="https://wwww.facebook.com" social4="Facebook" icon4="/images/twitter.svg" link4="https://wwww.facebook.com" %}
+{% pattern footer/footer social1="Facebook" icon1="/images/facebook.svg" link1="https://wwww.facebook.com" social2="Instagram" icon2="/images/instagram.svg" link2="https://wwww.instagram.com" social3="Pinterest" icon3="/images/pinterest.svg" link3="https://wwww.pinterest.com" social4="Twitter" icon4="/images/twitter.svg" link4="https://wwww.twitter.com" %}
 
 </body>
 </html>
