--- a/_patterns/Sections/sections.css
+++ b/_patterns/Sections/sections.css
@@ -1,6 +1,6 @@
 html {
   box-sizing: border-box;
-  font-family: Roboto, sans-serif;
+  /* font-family: Roboto, sans-serif; */
   line-height: 1.5;
 }
 
@@ -45,7 +45,7 @@ body {
 }
 
 h2 {
-  font-size: 3rem;
+  font-size: 2rem;
   margin: 0;
   color: black;
   display: inline;
