--- a/_patterns/banner/banner.css
+++ b/_patterns/banner/banner.css
@@ -45,3 +45,13 @@
   top: 35%;
   transform: translate(-50%, -50%);
 }
+
+.main-title h1 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 3rem;
+}
+
+.hero-title h1 {
+  font-family: "Roboto Condensed", sans-serif;
+  font-size: 3rem;
+}
